Separated controllers from main. Progress on mentor_request.
